unpackaged/main/default/objects/sfsp__SalesAsyncJob__c/sfsp__SalesAsyncJob__c.object-meta.xml
<CustomObject>
    <label>Sales Async Job</label>
    <nameField>
        <displayFormat>Job-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Async Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>