unpackaged/main/default/objects/sfsp__SalesAsyncJob__c/fields/sfsp__Details__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>