unpackaged/main/default/objects/sfsp__SalesAsyncJob__c/fields/sfsp__SalesAssignmentObject__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesAssignmentObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Assignment Object</label>
    <referenceTo>sfsp__SalesAssignmentObject__c</referenceTo>
    <relationshipLabel>Sales Async Jobs</relationshipLabel>
    <relationshipName>SalesAsyncJobs</relationshipName>
    <type>Lookup</type>
</CustomField>