unpackaged/main/default/objects/sfsp__SalesAsyncJob__c/fields/sfsp__Splunk__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Splunk__c</fullName>
    <label>Splunk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>