unpackaged/main/default/objects/sfsp__SalesAsyncJob__c/fields/sfsp__Status__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>