unpackaged/main/default/objects/sfsp__SalesAsyncJob__c/fields/sfsp__Type__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>